# protoss

./: .dockerignore  .gdb_history  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  code.md  docker-compose.yml  flake.nix  main.cpp  readme.md
chall/: Dockerfile  docker-compose.yml  main.cpp  protoss  protoss.proto  protossinterface  signin
cpp_corrupt/: .gdb_history  conv_value  conv_value.cpp  corrupt_backing_ptr  corrupt_backing_ptr.cpp  corrupt_string_size  corrupt_string_size.cpp  cpp_print  cpp_print.cpp  cpp_print.i64  leak_heap  leak_heap.cpp  string_size  string_size.cpp  vec_iter_corrupt  vec_iter_corrupt.cpp
docker/: docker-compose.yml
docker/analyze/: Dockerfile  init.sql
docker/analyze/config/: .tmux.conf
docker/analyze/python/: Makefile  ab_info.py  main.py
docker/analyze/python/module/: custom.py  memory.py  protoss_handler.py
docker/analyze/python/proto/: protoss.proto  protoss_old.proto
docker/analyze/request/: buy  signin  signup
docker/chall/: Dockerfile  flag_1
docker/chall/libs/: libstdc++.so.6
example/: CMakeLists.txt  Dockerfile  flake.nix  main.cpp
example/.direnv/: flake-profile-1-link
ida/: protoss.id1  protoss.id2  protoss.nam  protoss.til
proto/: Makefile  protoss.pb.cc  protoss.pb.h  protoss.proto
python/: main.py
python/module/: custom_macros.py  memory.py  protoss_handler.py  protoss_log.py
test/: CMakeLists.txt  Dockerfile  docker-compose.yml  flag_1  init.sql  main.cpp
test/no_lib/: Dockerfile  docker-compose.yml  init.sql  main.cpp
